--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,10 @@
   align-items: center;
 }
 
+.nav-title:hover {
+  color: #fff;
+}
+
 .nav-menu {
   list-style: none;
   display: flex;
@@ -56,6 +60,10 @@
   height: 100%;
   display: flex;
   align-items: center;
+}
+
+.nav-link:hover {
+  color: #fff;
 }
 
 .hamburger-menu {
