--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@
 
 .nav-title {
   font-size: 2rem;
-  color: inherit;
+  color: #668aff;
   text-decoration: none;
   height: 100%;
   display: flex;
@@ -40,7 +40,7 @@
 }
 
 .nav-title:hover {
-  color: #fff;
+  color: #b8bfd6;
 }
 
 .nav-menu {
@@ -100,12 +100,10 @@
 .movie-poster {
   width: 100%;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .movie-poster:hover {
-  box-shadow: none;
+  box-shadow: 0px 0px 3px 3px rgb(120, 125, 143);
 }
 
 .popular-movies {
@@ -176,9 +174,25 @@
 }
 
 .movie-details li {
-  border: 1px solid #B8BFD6;
+  border: 1px solid #668aff;
   border-radius: 3px;
   padding: 2px 8px;
+  cursor: pointer;
+}
+
+.movie-details li:hover {
+  background-color: #668aff;
+  color: #fff;
+}
+
+.movie-details-link {
+  color: inherit;
+  background-color: inherit;
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .movie-details div {
