--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@
 }
 
 .nav-title:hover {
-  color: #b8bfd6;
+  color: #7c91d4;
 }
 
 .nav-menu {
@@ -229,6 +229,17 @@
 .overview {
   font-size: 18px;
   line-height: 1.4;
+  margin-bottom: 0.7rem;
+}
+
+.similar-movies {
+  text-decoration: none;
+  color: #668aff;
+  font-size: 21px;
+}
+
+.similar-movies:hover {
+  color: #7c91d4;
 }
 
 /* Footer */
